# TINA

./: .gitignore  pyproject.toml  run.py  train.py
data_provider/: data_factory.py  data_loader.py
datasets/EPF/: BE.csv  DE.csv  FR.csv  NP.csv  PJM.csv
datasets/SMD/: SMD_test_label.npy  SMD_test_label.pkl
datasets/Stock/: 000001.SS.csv  Gold_daily.csv
exp/: exp_basic.py  exp_long_term_forecasting.py
models/: MANTA.py  TINA.py  TINA_Ablation.py
scripts/exogenous_forecast/EPF/: TINA_Ablation.sh
scripts/long_term_forecast/ECL_script/: TINA.sh  TINA_M.sh
scripts/long_term_forecast/ETT_script/: TINA_ETTh1.sh  TINA_ETTh2.sh  TINA_ETTm1.sh  TINA_ETTm2.sh  TINA_M_ETTh1.sh  TINA_M_ETTh2.sh  TINA_M_ETTm1.sh  TINA_M_ETTm2.sh
scripts/long_term_forecast/Stock_script/: TINA.sh
scripts/long_term_forecast/Traffic_script/: TINA.sh  TINA_M.sh
scripts/long_term_forecast/Weather_script/: TINA.sh  TINA_M.sh
utils/: metrics.py  tools.py
